# RM_PKA_2025_DartRack_AutoAim

./: README.md
dart_bringup/: CMakeLists.txt  package.xml
dart_bringup/config/: camera_info.yaml  launch_params.yaml
dart_bringup/config/node_params/: camera_params.yaml  dahua_camera_driver_params.yaml  detector_params.yaml  hik_camera_driver_params.yaml  serial_params.yaml  solver_params.yaml
dart_bringup/launch/: bringup.launch.py
dart_camera/: CMakeLists.txt  README.md  package.xml
dart_camera/include/: hik_camera_node.hpp
dart_camera/rm_camera_driver/: package.xml
dart_camera/rm_camera_driver/include/rm_camera_dahua/: dahua_camera.hpp
dart_camera/rm_camera_driver/src/: dahua_camera.cpp
dart_camera/rm_hik_camera_driver/: package.xml
dart_camera/rm_hik_camera_driver/src/: hik_camera_node.cpp
dart_camera/src/: hik_camera_node.cpp
dart_detector/: CMakeLists.txt  README.md  package.xml
dart_detector/include/dart_detector/: dart_detector_node.hpp  detect_method.hpp  screenshot_manager.hpp  video_recorder.hpp
dart_detector/src/: dart_detector_node.cpp  detect_method.cpp  screenshot_manager.cpp  video_recorder.cpp
dart_interfaces/: CMakeLists.txt  README.md  package.xml
dart_interfaces/msg/: BallisticParams.msg  SerialReceiveData.msg  SerialSendData.msg
dart_interfaces/srv/: SetMode.srv
dart_serial/: CMakeLists.txt  README.md  package.xml
dart_serial/include/dart_serial/: uart_driver.hpp  uart_node.hpp  uart_protocol.hpp
dart_serial/src/: uart_driver.cpp  uart_node.cpp  uart_protocol.cpp
dart_solver/: CMakeLists.txt  package.xml
dart_solver/include/dart_solver/: ballistic_model.hpp  one_euro_filter.hpp  solver_method.hpp  solver_node.hpp
dart_solver/src/: ballistic_model.cpp  one_euro_filter.cpp  solver_method.cpp  solver_node.cpp
dart_upstart/: README.md  dart_clean_up.sh  dart_watch_dog.sh  register_service.sh
dart_utils/: CMakeLists.txt  package.xml
dart_utils/src/: heartbeat.cpp
