<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dart_camera</name>
  <version>0.0.0</version>
  <description>Package for Hikvision camera handling with composable node support</description>
  <maintainer email="1258124282@qq.com">nolem</maintainer>
  <license>TODO: License declaration</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- build_depend: dependencies for building the package -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dart_utils</build_depend>

  <!-- exec_depend: dependencies for running the package -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>dart_utils</exec_depend>
  <exec_depend>camera_calibration</exec_depend>

  <!-- test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- export information -->
  <export>
    <build_type>ament_cmake</build_type>
    <ament_cmake_export_include_directories include_directories="include" />
    <ament_cmake_export_libraries library_names="${PROJECT_NAME}" />
  </export>
</package>
